force-app/main/default/objects/SyncError__c/SyncError__c.object-meta.xml
<CustomObject>
    <description>Actionable synchronization error captured by ErpSync.</description>
    <label>Sync Error</label>
    <nameField>
        <displayFormat>ERR-{000000}</displayFormat>
        <label>Sync Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>