force-app/main/default/objects/SyncError__c/fields/ErrorType__c.field-meta.xml
<CustomField>
    <fullName>ErrorType__c</fullName>
    <label>Error Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authentication</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Quota</fullName>
            </value>
            <value>
                <fullName>Salesforce Validation</fullName>
            </value>
            <value>
                <fullName>External Validation</fullName>
            </value>
            <value>
                <fullName>Mapping</fullName>
            </value>
            <value>
                <fullName>Conflict</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
                <default>true</default>
                <label>Technical</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>