force-app/main/default/objects/SyncError__c/fields/ExternalRecordId__c.field-meta.xml
<CustomField>
    <fullName>ExternalRecordId__c</fullName>
    <label>External Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>