force-app/main/default/objects/SyncError__c/fields/IntegrationSystem__c.field-meta.xml
<CustomField>
    <fullName>IntegrationSystem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration System</label>
    <referenceTo>IntegrationSystem__c</referenceTo>
    <relationshipLabel>Sync Errors</relationshipLabel>
    <relationshipName>SyncErrors</relationshipName>
    <type>Lookup</type>
</CustomField>