force-app/main/default/objects/SyncError__c/fields/IsRetryable__c.field-meta.xml
<CustomField>
    <fullName>IsRetryable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Retryable</label>
    <type>Checkbox</type>
</CustomField>