force-app/main/default/objects/SyncError__c/fields/LastRetryAt__c.field-meta.xml
<CustomField>
    <fullName>LastRetryAt__c</fullName>
    <label>Last Retry At</label>
    <type>DateTime</type>
</CustomField>