force-app/main/default/objects/SyncError__c/fields/NextRetryAt__c.field-meta.xml
<CustomField>
    <fullName>NextRetryAt__c</fullName>
    <label>Next Retry At</label>
    <type>DateTime</type>
</CustomField>