force-app/main/default/objects/SyncError__c/fields/ResolutionNotes__c.field-meta.xml
<CustomField>
    <fullName>ResolutionNotes__c</fullName>
    <label>Resolution Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>