force-app/main/default/objects/SyncError__c/fields/RetryExecution__c.field-meta.xml
<CustomField>
    <fullName>RetryExecution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retry Execution</label>
    <referenceTo>SyncExecution__c</referenceTo>
    <relationshipLabel>Retried Sync Errors</relationshipLabel>
    <relationshipName>RetriedSyncErrors</relationshipName>
    <type>Lookup</type>
</CustomField>