force-app/main/default/objects/SyncError__c/fields/SyncExecution__c.field-meta.xml
<CustomField>
    <fullName>SyncExecution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sync Execution</label>
    <referenceTo>SyncExecution__c</referenceTo>
    <relationshipLabel>Sync Errors</relationshipLabel>
    <relationshipName>SyncErrors</relationshipName>
    <type>Lookup</type>
</CustomField>