force-app/main/default/objects/SyncError__c/fields/TechnicalDetails__c.field-meta.xml
<CustomField>
    <fullName>TechnicalDetails__c</fullName>
    <label>Technical Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>